--- a/CustOrder_Q6.html
+++ b/CustOrder_Q6.html
@@ -8,6 +8,14 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
 </head>
+<!-- /***************************************************************************** 
+* ITC5202 – Project1 * We declare that this assignment is our own work in accordance with Humber Academic * Policy. 
+* No part of this assignment has been copied manually or electronically from any other * source (including web sites) or distributed to other students. * 
+*	Names: Sandeep Das, Rohan Vasudev Patel 
+*	Student ID: N01472825 , N01469929
+*	Date: 28th Feb 2022 
+* * **************************
+ -->
 <body>
     <div class="container">
         <h1>Orders yet to be shipped are highlighted in red</h1>
